# btc-inference-engine

./: .env.example  .gitignore  CODESPACES_QUICKFIX.md  Makefile  README.md  check_returns.py  debug_forecasting_data.py  debug_forecasts.py  diagnose.sh  pyproject.toml  setup.py  test_forecasting.py  trace_forecasts.py
.devcontainer/: devcontainer.json
.github/: ACTIONS.md
.github/workflows/: daily-update.yml
configs/: data_sources.yaml  features.yaml  model.yaml  pipeline.yaml
docs/: CODESPACES.md  INSTALLATION.md  VERIFICATION.md  cli_reference.md  data_sources.md  methodology.md
src/btc_engine/: __init__.py  cli.py  cli_additions.py
src/btc_engine/connectors/: __init__.py  base.py  deribit.py  glassnode.py
src/btc_engine/dashboard/: __init__.py  app.py
src/btc_engine/database/: __init__.py  client.py  migrations.py  schema.py
src/btc_engine/features/: __init__.py  divergence.py  hedging_pressure.py  onchain_indices.py  options_surface.py  risk_neutral.py  utils.py
src/btc_engine/ingestion/: __init__.py  backfill.py  deribit_ingest.py  glassnode_ingest.py  incremental.py
src/btc_engine/models/: __init__.py  evaluation.py  forecasting.py  state_space.py
src/btc_engine/newsletter/: __init__.py  generator.py
src/btc_engine/utils/: __init__.py  config_loader.py  constants.py  logging_config.py
tests/: conftest.py  test_database.py
tests/test_features/: __init__.py  test_utils.py
